--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "keywords": [
     "codex editor",
-    "paragraph",
+    "list",
     "tool"
   ],
   "description": "List Tool for CodeX.Editor",
