--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
-  "name": "codex.editor.list",
-  "version": "1.2.3",
+  "name": "@editorjs/list",
+  "version": "1.3.0",
   "keywords": [
     "codex editor",
     "list",
-    "tool"
+    "tool",
+    "editor.js",
+    "editorjs"
   ],
-  "description": "List Tool for CodeX.Editor",
+  "description": "List Tool for Editor.js",
   "license": "MIT",
-  "repository": "https://github.com/codex-editor/list",
+  "repository": "https://github.com/editor-js/list",
   "main": "./dist/bundle.js",
   "scripts": {
-    "build": "webpack --config ./webpack.config.js --mode production --watch"
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development --watch"
   },
   "author": {
     "name": "CodeX Team",
     "email": "team@ifmo.su"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-loader": "^8.0.5",
     "css-loader": "^1.0.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.16.3",
-    "webpack-cli": "^3.1.0"
-  },
-  "babel": {
-    "presets": [
-      "env"
-    ]
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   }
 }
