--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@editorjs/list",
-  "version": "1.3.4",
+  "version": "1.4.0",
   "keywords": [
     "codex editor",
     "list",
@@ -17,8 +17,8 @@
     "build:dev": "webpack --mode development --watch"
   },
   "author": {
-    "name": "CodeX Team",
-    "email": "team@ifmo.su"
+    "name": "CodeX",
+    "email": "team@codex.so"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
